samples/_failures_safe/1761262461_322cfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35e3ba34.c: In function ‘main’:
./samples/SAFE/__tmp_35e3ba34.c:162:5: error: expected declaration or statement at end of input
  162 |     };
      |     ^
